# Kitsu.py

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  LICENSE  LICENSE.txt  README.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md
docs/: client.rst  conf.py  exceptions.rst  index.md  index.rst  installing.md  installing.rst  models.rst  reference.md  requirements.txt  usage.md
examples/: search_anime.py  search_manga.py  trending_anime.py
kitsu/: __init__.py  client.py  enums.py  errors.py  models.py
kitsu/models/: __init__.py  anime.py  common.py  manga.py
kitsu/types/: __init__.py  anime.py  common.py  manga.py
kitsu_extended/: __init__.py  client.py
