[tool.poetry]
name        = "kitsu.py"
version     = "0.2.0"
description = "kitsu.py is an asynchronous API wrapper for Kitsu written in Python."
authors     = ["MrArkon <mrarkon@outlook.com>"]
maintainers = ["MrArkon <mrarkon@outlook.com>"]
license     = "MIT"
readme      = "README.md"
repository  = "https://github.com/MrArkon/kitsu.py/"
packages    = [
    { include = "kitsu" },
    { include = "LICENSE"}
]
keywords    = ["kitsu", "async kitsu", "kitsu.py", "kitsu api wrapper"]
classifiers = [
    "Topic :: Internet",
    "Topic :: Utilities",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Typing :: Typed"
]

[tool.poetry.dependencies]
python          = "^3.8"
aiohttp         = "^3.7.4"
python-dateutil = "^2.8.2"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/MrArkon/kitsu.py/issues"

[tool.poetry.dev-dependencies]
black = "^21.6b0"

[tool.black]
line-length = 125
target-version = ["py39"]

[build-system]
requires      = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
