[tool.poetry]
name        = "kitsu.py"
version     = "2.0.0"
description = "A Simple & Lightweight Asynchronous Python Wrapper for Kitsu's Manga & Anime API."
authors     = ["MrArkon <mrarkon@outlook.com>"]
maintainers = ["MrArkon <mrarkon@outlook.com>"]
license     = "MIT"
readme      = "README.md"
repository  = "https://github.com/MrArkon/kitsu.py/"
packages    = [
    { include = "kitsu" },
    { include = "LICENSE"}
]
keywords    = ["kitsu", "async kitsu", "kitsu.py", "kitsu api wrapper"]
classifiers = [
    "Topic :: Internet",
    "Topic :: Utilities",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Typing :: Typed"
]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.7.4"

[tool.poetry.urls]
"Documentation" = "https://kitsu-py.readthedocs.io/en/stable/"
"Bug Tracker" = "https://github.com/MrArkon/kitsu.py/issues"
"Changelog" = "https://github.com/MrArkon/kitsu.py/blob/master/CHANGELOG.md"

[tool.poetry.group.lint.dependencies]
black = "^23.1.0"
isort = "^5.12.0"

[tool.poetry.group.docs.dependencies]
Sphinx = "^6.1.3"
furo = "^2022.12.7"
tomli = "^2.0.1"
sphinx-inline-tabs = "^2022.1.2-beta.11"
sphinx-copybutton = "^0.5.0"

[build-system]
requires      = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 125

[tool.isort]
profile = "black"
combine_as_imports = true
combine_star = true
line_length = 125

[tool.pyright]
include = ["kitsu"]
useLibraryCodeForTypes = true
pythonVersion = "3.8"
reportOptionalMemberAccess = false